[gd_scene load_steps=6 format=2]

[ext_resource path="res://theme-default.tres" type="Theme" id=1]
[ext_resource path="res://components/confirm_popup.gd" type="Script" id=2]
[ext_resource path="res://art-built/9patch/panel-9patch.png" type="Texture2D" id=3]
[ext_resource path="res://art-built/button-yes.png" type="Texture2D" id=4]
[ext_resource path="res://art-built/button-no.png" type="Texture2D" id=5]

[node name="confirm_popup" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
pivot_offset = Vector2( 0, 0 )
clip_contents = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 1 )
script = ExtResource( 2 )
_sections_unfolded = [ "Mouse", "Theme" ]

[node name="mouse_blocker" type="ColorRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
pivot_offset = Vector2( 0, 0 )
clip_contents = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 0.25098 )
_sections_unfolded = [ "Material", "Mouse" ]

[node name="nine_patch_rect" type="NinePatchRect" parent="." index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -213.0
offset_top = -120.0
offset_right = 213.0
offset_bottom = 143.0
pivot_offset = Vector2( 0, 0 )
clip_contents = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
patch_margin_left = 11
patch_margin_top = 11
patch_margin_right = 11
patch_margin_bottom = 11
_sections_unfolded = [ "Margin", "Mouse", "Patch Margin" ]

[node name="yes_button" type="TextureButton" parent="nine_patch_rect" index="0"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -86.0
offset_right = 199.0
offset_bottom = -20.0
pivot_offset = Vector2( 0, 0 )
clip_contents = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
toggle_mode = false
focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5
_sections_unfolded = [ "Rect", "Size Flags", "Textures" ]

[node name="no_button" type="TextureButton" parent="nine_patch_rect" index="1"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -199.0
offset_top = -86.0
offset_right = -2.0
offset_bottom = -20.0
pivot_offset = Vector2( 0, 0 )
clip_contents = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
toggle_mode = false
focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5
_sections_unfolded = [ "Rect", "Size Flags", "Textures" ]

[node name="rich_text_label" type="RichTextLabel" parent="nine_patch_rect" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 27.0
offset_top = 30.0
offset_right = 401.0
offset_bottom = 154.0
pivot_offset = Vector2( 0, 0 )
clip_contents = true
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
bbcode_enabled = true
text = "[b]Hello![/b]

This is a tutorial."
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Hello!

This is a tutorial."
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "custom_fonts" ]


